# gps-tracker

./: .gitignore  Makefile  README.md
.github/workflows/: main.yml
.reuse/: dep5
gnat/: receiver.gpr
source/gui/: gps.html
source/receiver/: CMakeLists.txt  recGPS.ino  sdkconfig
source/receiver/main/: CMakeLists.txt  bluetooth.adb  bluetooth.ads  ints.adb  ints.ads  locations.adb  locations.ads  lora.adb  lora.ads  main.adb  nimble_binding.c
source/transmiter/: gps.ino
